--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 ---
 #
-# Copyright (C) 2024 James Cherti
+# Copyright (C) 2024-2025 James Cherti
 # URL: https://github.com/jamescherti/easysession.el
 #
 # This file is free software; you can redistribute it and/or modify
