Add pre-commit-elisp hooks

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,3 +7,10 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
+
+  - repo: https://github.com/jamescherti/pre-commit-elisp
+    rev: v1.0.1
+    hooks:
+      - id: elisp-check-parens
+      - id: elisp-byte-compile
+      - id: elisp-indent
